# OnlineRetarget_Sonic

./: .envrc  .gitignore  AGENTS.md  README.md  environment.yml  goal.md  pyproject.toml
configs/: baseline_mlp.yaml  bones_bvh_flow_debug.yaml  bones_bvh_mlp_5000.yaml  bones_bvh_mlp_debug.yaml  bones_bvh_token_transformer_actor_bank_debug.yaml  bones_bvh_token_transformer_debug.yaml  bones_bvh_token_transformer_sonic_txt_filtered.yaml  bones_bvh_token_vae_debug.yaml  bones_bvh_transformer_debug.yaml  bones_sonic_diffusion_policy_debug.yaml  bones_sonic_temporal_diffusion_policy_vis_smoke.yaml  skeleton_geometry_ae_all_skeletons.json  sonic_kin_only_soma_encoder_proportional.json  sonic_kin_only_soma_encoder_uniform.json  sonic_kin_skeleton_a1_concat_1gpu.json  sonic_kin_skeleton_a2_film_1gpu.json  sonic_kin_skeleton_b1_adapter_1gpu.json  sonic_kin_skeleton_b2_expert_1gpu.json  sonic_kin_soma_motionlib_a0_frozen_ae_proportional_2gpu_2kvis.json  sonic_kin_soma_motionlib_a0_frozen_ae_proportional_4gpu.json  sonic_kin_soma_motionlib_a0_frozen_ae_uniform_2gpu_2kvis.json  sonic_kin_soma_motionlib_a0_frozen_ae_uniform_4gpu.json  sonic_kin_soma_motionlib_a0_no_skeleton_encoder_proportional_2gpu_2kvis.json  sonic_kin_soma_motionlib_a0_no_skeleton_encoder_proportional_4gpu.json  sonic_kin_soma_motionlib_a0_no_skeleton_encoder_uniform_2gpu_2kvis.json  sonic_kin_soma_motionlib_a0_no_skeleton_encoder_uniform_4gpu.json  sonic_kin_soma_motionlib_a1_concat_1gpu.json  sonic_kin_soma_motionlib_a2_film_1gpu.json  sonic_kin_soma_motionlib_b1_adapter_1gpu.json  (+16 more)
docs/: architecture.md  (+3 more)
(+236 files in other folders)
