[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-retarget"
version = "0.1.0"
description = "Learning-based online retargeting from human skeleton motion to Unitree G1."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
online-retarget = "online_retarget.cli:main"
online-retarget-web = "online_retarget.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
online_retarget = ["web_static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
